--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.semantic_release]
-version_variable = ["pyproject.toml:version"]
+version_variable = ["pyproject.toml:project.version"]
 
 [tool.uv.workspace]
 members = ["operators/image_vec_rep_resnet"]
