--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "feluda"
-version = "0.9.0"
+version = "0.9.1"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -14,7 +14,12 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["python-semantic-release>=9.14.0", "toml>=0.10.2", "tomli>=2.2.1", "tomli-w>=1.1.0"]
+dev = [
+    "python-semantic-release>=9.14.0",
+    "toml>=0.10.2",
+    "tomli>=2.2.1",
+    "tomli-w>=1.1.0",
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -23,12 +28,12 @@ build-backend = "hatchling.build"
 [tool.semantic_release]
 version_variable = ["pyproject.toml:project.version"]
 
-[tool.uv.workspace]
-members = ["operators/image_vec_rep_resnet"]
-
 [tool.semantic_release.branches.main]
 match = "main"
 prerelease = false
+
+[tool.uv.workspace]
+members = ["operators/image_vec_rep_resnet"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["feluda"]
