--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "feluda"
-version = "0.9.1"
+version = "0.9.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -19,6 +19,7 @@ dev = [
     "toml>=0.10.2",
     "tomli>=2.2.1",
     "tomli-w>=1.1.0",
+    "ruff>=0.8.3",
 ]
 
 [build-system]
@@ -31,6 +32,7 @@ version_variable = ["pyproject.toml:project.version"]
 [tool.semantic_release.branches.main]
 match = "main"
 prerelease = false
+tag_format = "feluda-{version}"
 
 [tool.uv.workspace]
 members = ["operators/image_vec_rep_resnet"]
