--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python version
         uses: actions/setup-python@v5
@@ -67,31 +68,29 @@ jobs:
           echo "First Commit in PR: $FIRST_COMMIT"
           echo "Latest Commit in PR: $LATEST_COMMIT"
 
-# jobs:
-#   release:
-#     if: github.event.pull_request.merged == true
-#     runs-on: ubuntu-latest
-#     concurrency: release
-#     permissions:
-#       contents: write
-#     # Map a step output to a job output
-#     outputs:
-#       released: ${{ steps.release.outputs.released }}
-#       tag: ${{ steps.release.outputs.tag }}
+      - name: Run Dynamic Semantic Release Script
+        env:
+          FIRST_COMMIT: ${{ steps.commit-range.outputs.first_commit }}
+          LATEST_COMMIT: ${{ steps.commit-range.outputs.latest_commit }}
+        run: |
+          python semantic_release.py "$FIRST_COMMIT" "$LATEST_COMMIT"
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-#         with:
-#           fetch-depth: 0
+      - name: Commit and Push Changes
+        run: |
+          # Configure git user
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
 
-#       - name: Setup Python version
-#         uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
-#         with:
-#           python-version: '3.11'
-
-#       - name: Python Semantic Release
-#         id: release
-#         uses: python-semantic-release/python-semantic-release@c82bd673c30da94a02e039963c8c4c8a51758096 # v9.1.1
-#         with:
-#           github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Check if there are any changes
+          if [[ -n $(git status -s) ]]; then
+            # Add all changes
+            git add .
+            # Commit changes
+            git commit -m "chore: bump version and update related files"
+            # Push changes
+            git push
+            # push tags
+            git push --tags
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
