--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,15 +7,25 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
 
-#   - repo: https://github.com/compilerla/conventional-pre-commit
-#     rev: v3.6.0
-#     hooks:
-#       - id: conventional-pre-commit
-#       - stages: [commit-msg]
-#       - args: []
+  #   - repo: https://github.com/compilerla/conventional-pre-commit
+  #     rev: v3.6.0
+  #     hooks:
+  #       - id: conventional-pre-commit
+  #       - stages: [commit-msg]
+  #       - args: []
 
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v3.9.1  # Use the latest version available
+    rev: v3.9.1 # Use the latest version available
     hooks:
       - id: commitizen
         stages: [commit-msg]
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.8.3
+    hooks:
+      # Run the linter.
+      - id: ruff
+        # args: [--fix]
+      # Run the formatter.
+      - id: ruff-format
