--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -25,7 +25,7 @@ version_variable = [
 [tool.semantic_release.branches.main]
 match = "main"
 prerelease = false
-tag_format = "{name}-{version}"
+tag_format = "feluda-image-vec-rep-resnet-{version}"
 
 [tool.hatch.build.targets.wheel]
 packages = [
