--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,24 +1,24 @@
-name: Create release
+# name: Create release
 
-on:
-  push:
-    tags:
-      - 'feluda-*.*.*'
+# on:
+#   push:
+#     tags:
+#       - 'feluda-*.*.*'
 
-permissions:
-  contents: write
+# permissions:
+#   contents: write
 
-jobs:
-  release:
-    name: Release Feluda
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Create release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref_name }}
-        run: |
-          gh release create "$tag" \
-              --repo="$GITHUB_REPOSITORY" \
-              --title="${GITHUB_REPOSITORY#*/} ${tag#v}" \
-              --generate-notes
+# jobs:
+#   release:
+#     name: Release Feluda
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - name: Create release
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           tag: ${{ github.ref_name }}
+#         run: |
+#           gh release create "$tag" \
+#               --repo="$GITHUB_REPOSITORY" \
+#               --title="${GITHUB_REPOSITORY#*/} ${tag#v}" \
+#               --generate-notes
