--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -85,25 +85,21 @@ jobs:
             git commit -m "chore: bump version and update related files"
             # Push changes
             git push
-            
-            # storing old tag before push
-            OLD_TAGS=$(git tag -l)
             # push tags
-            git push --tags
-            # storing new tags after push
-            NEW_TAGS=$(git tag -l)
-            # find newly created tags
-            CREATED_TAGS=$(comm -13 <(echo "$OLD_TAGS" | sort) <(echo "$NEW_TAGS" | sort))
-            # Debug: Log the old, new, and created tags
-            echo "Old tags: $OLD_TAGS"
-            echo "New tags: $NEW_TAGS"
-            echo "Created tags: $CREATED_TAGS"
+            TAG_OUTPUT=$(git push --tags)
+             # Extract the newly pushed tags from the output
+            NEW_TAGS=$(echo "$TAG_OUTPUT" | grep -oP "(?<=\* \[new tag\] +)[^\s]+")
 
-            # Get the latest tag from the new tags
-            LATEST_TAG=$(echo "$CREATED_TAGS" | tail -n 1)
+            # Debug: Log the output and the extracted tags
+            echo "Git push output:"
+            echo "$TAG_OUTPUT"
+            echo "Newly pushed tags:"
+            echo "$NEW_TAGS"
 
-            # Debug: Log the latest tag
-            echo "Latest tag: $LATEST_TAG"
+            # If you need to process the tags further, iterate through them
+            for tag in $NEW_TAGS; do
+              echo "Processing tag: $tag"
+            done  
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
