fix: added release code to workflow

--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -97,6 +97,12 @@ jobs:
 
             # push tags
             git push --tags
+
+            # Releasing the package
+            gh release create "$UNPUSHED_TAGS" \
+              -- repo="$GITHUB_REPOSITORY" \
+              -- title="$UNPUSHED_TAGS" \
+              -- generate-notes
             
           fi
         env:
