fix: added CHANGELOG.md file creation

--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -102,7 +102,8 @@ jobs:
             gh release create "$UNPUSHED_TAGS" \
               --repo="$GITHUB_REPOSITORY" \
               --title="$UNPUSHED_TAGS" \
-              --generate-notes
+              --generate-notes \
+              --notes-file=CHANGELOG.md
             
           fi
         env:
