--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           pwd
           # run the script
-          python -m scripts.bump "$FIRST_COMMIT" "$LATEST_COMMIT"
+          python -m scripts.semantic_release_workflow "$FIRST_COMMIT" "$LATEST_COMMIT"
 
       - name: Commit and Push Changes
         run: |
@@ -82,7 +82,7 @@ jobs:
             # Add all changes
             git add .
             # Commit changes
-            git commit -m "chore: bump version and update related files"
+            git commit -m "chore: semantic versioning and update related files"
             # Push changes
             git push
 
@@ -110,6 +110,3 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-     
-
