fix: workflow fixed

--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -103,7 +103,7 @@ jobs:
               gh release create "$UNPUSHED_TAGS" \
                 --repo="$GITHUB_REPOSITORY" \
                 --title="$UNPUSHED_TAGS" \
-                --generate-notes \
+                --generate-notes
             fi
           fi
         env:
