--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -85,7 +85,7 @@ jobs:
 
           if [[ -n $(git status -s) ]]; then
             git add .
-            git commit -m "chore: bump version and update related files"
+            git commit -m "chore: semantic versioning workflow and update related files"
             git push
             git push --tags
 
