--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "feluda-image-vec-rep-resnet"
-version = "0.7.2"
+version = "0.0.0"
 requires-python = ">=3.10"
 dependencies = [
     "torch>=2.5.1",
@@ -12,15 +12,11 @@ dependencies = [
 ]
 
 [build-system]
-requires = [
-    "hatchling",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.semantic_release]
-version_variable = [
-    "pyproject.toml:project.version",
-]
+version_variable = ["pyproject.toml:project.version"]
 
 [tool.semantic_release.branches.main]
 match = "main"
@@ -28,6 +24,4 @@ prerelease = false
 tag_format = "{name}-{version}"
 
 [tool.hatch.build.targets.wheel]
-packages = [
-    ".",
-]
+packages = ["."]
