--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "feluda"
-version = "0.15.1"
+version = "0.0.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -24,15 +24,11 @@ dev = [
 ]
 
 [build-system]
-requires = [
-    "hatchling",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.semantic_release]
-version_variable = [
-    "pyproject.toml:project.version",
-]
+version_variable = ["pyproject.toml:project.version"]
 
 [tool.semantic_release.branches.main]
 match = "main"
@@ -40,11 +36,11 @@ prerelease = false
 tag_format = "{name}-{version}"
 
 [tool.uv.workspace]
-members = [
-    "operators/image_vec_rep_resnet",
-]
+members = ["operators/image_vec_rep_resnet"]
 
 [tool.hatch.build.targets.wheel]
-packages = [
-    "feluda",
-]
+packages = ["feluda"]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
