--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -5,22 +5,18 @@ requires-python = ">=3.10"
 dependencies = [
     "torch>=2.5.1",
     "torchvision>=0.20.1",
-    "numpy>=2.1.3",
-    "pillow>=11.0.0",
-    "memray>=1.14.0",
+    "numpy>=2.2.1",
+    "pillow>=11.1.0",
+    "memray>=1.15.0",
     "pyinstrument>=5.0.0",
 ]
 
 [build-system]
-requires = [
-    "hatchling",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.semantic_release]
-version_variable = [
-    "pyproject.toml:project.version",
-]
+version_variable = ["pyproject.toml:project.version"]
 
 [tool.semantic_release.branches.main]
 match = "main"
@@ -28,6 +24,4 @@ prerelease = false
 tag_format = "{name}-{version}"
 
 [tool.hatch.build.targets.wheel]
-packages = [
-    ".",
-]
+packages = ["."]
